# simple-screen-recorder-gtk

./: .gitignore  Cargo.toml
src/: main.rs
