[package]
name = "simple-screen-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
gstreamer = { version = "0.22.5", features = ["v1_24"] }
gstreamer-app = { version = "0.22.0", features = ["v1_24"] }
gstreamer-video = { version = "0.22.5", features = ["v1_24"] }
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
num_cpus = "1.16.0"
scrap = { git = "https://github.com/rustdesk/rustdesk", version = "0.5.0" }
tokio = { version = "1.37.0", features = ["full"] }
